# DOT-ICL

./: README.md  pyproject.toml  requirements.txt
paper/: generate_figures.py  generate_icml_figures.py  main.aux  main.bbl  main.blg  main.out  main.tex  main_arxiv.aux  main_arxiv.bbl  main_arxiv.tex  main_short.aux  main_short.bbl  main_short.blg  main_short.out  main_short.tex  main_shortened.aux  main_shortened.bbl  main_shortened.blg  main_shortened.out  main_shortened.tex  references.bib
paper/kdd/: README.md  main.aux  main.out  main.tex
paper/lion/: README.md  main.aux  main.out  main.tex
results/exp2/: DELETED_README.txt
scripts/: 08_multi_position.py
